--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-  <!-- Styles -->
+  <!-- Styles - CSS-->
+  <link rel="icon" type="image/x-icon" href="Imagenes/Icono_data.png">
   <link rel="stylesheet" href="style_portfolio_final.css">
-  <link rel="icon" type="image/x-icon" href="Images/gratis-png-icono-portatil-blanco-desarrollo-web-iconos-de-computadora-sitio-web-diseno-web-world-wide-web-sitio-web-guardar-formato-de-icono.png">
 </head>
 <body>
   <!-- Navbar -->
@@ -33,7 +33,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-nav">
         <a class="navbar-brand" href="#">
-          <img src="Images/gratis-png-icono-portatil-blanco-desarrollo-web-iconos-de-computadora-sitio-web-diseno-web-world-wide-web-sitio-web-guardar-formato-de-icono.png" width="44" height="44" alt="Logo FR">
+          <img src="Imagenes/Icono_data.png" width="44" height="44" alt="Logo FR">
         </a>
         <ul class="navbar-nav d-flex justify-content-center align-items-center ms-2 gap-2">
           <li class="nav-item"><a class="nav-link" href="#sobre-mi">Sobre mí</a></li>
@@ -51,7 +51,7 @@
   <!-- Hero -->
   <header class="hero align-items-stretch">
     <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-      <img class="hero-imagen" src="Images/MiImagwn.jpg" alt="Foto de Fernando Robles">
+      <img class="hero-imagen" src="Imagenes/foto_cv.jpg" alt="Foto de Fernando Robles">
       <h1>Hola, soy Fernando</h1>
       <h2>Data Analyst & Business Intelligence</h2>
       <p>Transformo datos en decisiones de negocio con <strong>Power BI</strong>, <strong>SQL</strong> y <strong>Python</strong>. KPI storytelling + pipelines simples en <strong>BigQuery</strong>.</p>
@@ -113,6 +113,8 @@
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">Pandas</span>
               <span class="badge text-bg-primary">NumPy</span>
+              <span class="badge text-bg-primary">Matplotlib</span>
+              <span class="badge text-bg-primary">Seaborn</span>
               <span class="badge text-bg-primary">ETL</span>
             </div>
           </div>
@@ -148,7 +150,7 @@
         <!-- NBA-StatVision -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Images/nba_cover.webp" class="card-img-top" alt="Dashboard NBA-StatVision">
+            <img src="Imagenes/Nba.PNG" class="card-img-top" alt="Dashboard NBA-StatVision">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">NBA‑StatVision — Deportes</h5>
               <ul class="small mb-3">
@@ -231,8 +233,8 @@
 
   <!-- Footer -->
   <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-    <img class="footer-logo" src="Images/gratis-png-icono-portatil-blanco-desarrollo-web-iconos-de-computadora-sitio-web-diseno-web-world-wide-web-sitio-web-guardar-formato-de-icono.png" alt="logo">
-    <p class="footer-texto text-center">Aprender y crear con datos, todos los días.</p>
+    <p class="footer-texto text-center">“Los datos cuentan historias… yo ayudo a encontrarlas” .</p>
+    <img class="footer-logo" src="Imagenes/notebook_dashboard.webp" alt="logo">
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://www.linkedin.com/in/fernando-robles-bbb214223/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
       <a href="https://github.com/ferroblesmdq12" target="_blank" rel="noopener"><i class="bi bi-github"></i></a>
