Actulaizando Adventure Works en idioma

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         Soy <strong>Data Analyst</strong> con foco en <strong>KPIs</strong>, <strong>visualización</strong> y <strong>modelado</strong>. Experiencia construyendo dashboards en <strong>Power BI</strong>, consultas <strong>SQL</strong>, análisis con <strong>Pandas</strong> y procesos <strong>ETL</strong> simples y reproducibles. Formación en SoyHenry (DA) y proyectos reales en salud, deportes y retail.
       </p>
       <div class="d-flex gap-3 justify-content-center flex-wrap mt-2">
-        <span class="badge text-bg-light" data-i18n="about.badges.es">ES 🇦🇷 nativo</span>
+        <!-- <span class="badge text-bg-light" data-i18n="about.badges.es">ES 🇦🇷 nativo</span>
         <span class="badge text-bg-light" data-i18n="about.badges.en">EN B1/B2</span>
-        <span class="badge text-bg-light" data-i18n="about.badges.it">IT A2/B1</span>
+        <span class="badge text-bg-light" data-i18n="about.badges.it">IT A2/B1</span> -->
       </div>
     </div>
   </section>
@@ -155,7 +155,7 @@
         <!-- Biogenesys -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Images/biogenesys_cover.webp" class="card-img-top" alt="Dashboard Biogenesys">
+            <img src="Imagenes/Biogenesys.PNG" class="card-img-top" alt="Dashboard Biogenesys">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.biogenesys.title">Biogenesys — Salud LATAM</h5>
               <ul class="small mb-3">
@@ -165,7 +165,7 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/Biogenesys" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a>
+                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/NBA-StatVision" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a>
+                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
@@ -191,7 +191,7 @@
         <!-- Senda Café -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Images/senda_cafe_cover.webp" class="card-img-top" alt="Dashboard Senda Café">
+            <img src="Imagenes/Logo_café.png" class="card-img-top" alt="Dashboard Senda Café">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.senda.title">Senda Café — Retail</h5>
               <ul class="small mb-3">
@@ -201,12 +201,39 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/SendaCafe" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a>
+                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <!-- Proyectos (segunda línea) -->
+  <section id="proyectos" class="seccion-clara py-5">
+    <div class="container">
+      <div class="row g-4 mt-2">
+        <!-- Adventure Works -->
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="Imagenes/adventure works.jpg" class="card-img-top" alt="adventure">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title" data-i18n="projects.adventure.title">Adventure Works</h5>
+              <ul class="small mb-3">
+                <li data-i18n="projects.adventure.b1">Análisis de la base de datos Adventure Works (empresa ficticia de venta de bicicletas y accesorios).</li>
+                <li data-i18n="projects.adventure.b2">Objetivo: desarrollar un modelo analítico global y regional para entender el negocio, medir desempeño y mejorar la toma de decisiones.</li>
+                <li data-i18n="projects.adventure.b3">Herramientas principales: SQL Server, Power Query, Power BI y Storytelling de KPIs.</li>
+              </ul>
+              <div class="mt-auto">
+                <a href="https://github.com/ferroblesmdq12/AdventureWorks" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
+                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
 
       <div class="text-center mt-4">
         <a href="https://github.com/ferroblesmdq12?tab=repositories" target="_blank" rel="noopener" class="btn btn-info" data-i18n="projects.allRepos">
@@ -256,7 +283,7 @@
 
   <!-- Footer -->
   <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-    <p class="footer-texto text-center" data-i18n="footer.quote">“Los datos cuentan historias… yo ayudo a encontrarlas”.</p>
+    <p class="footer-texto text-center" data-i18n="footer.quote">“Cada dato esconde una historia… mi trabajo es descubrirla.”</p>
     <img class="footer-logo" src="Imagenes/notebook_dashboard.webp" alt="logo">
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://www.linkedin.com/in/fernando-robles-bbb214223/" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
@@ -288,7 +315,13 @@
           title: 'Proyectos de Data Analytics', subtitle: 'Casos con impacto medible', allRepos: 'Ver todos los repos',
           biogenesys: { title: 'Biogenesys — Salud LATAM', b1: 'Automatización de limpieza (2.3M filas) con Pandas.', b2: 'Refresh del dashboard: <strong>18m → 4m</strong>.', b3: 'Identifiqué 3 países con mayor potencial de expansión.' },
           nba: { title: 'NBA‑StatVision — Deportes', b1: 'BigQuery: estandarización de 10 temporadas.', b2: 'Modelo de lesiones vs. carga de juego.', b3: 'Filtros por jugador/equipo con rolling windows.' },
-          senda: { title: 'Senda Café — Retail', b1: 'Análisis de ventas, costos y productividad por camarero.', b2: 'Alertas de stock y propuesta de turnos óptimos.', b3: 'KPIs de margen y rotación mensual.' }
+          senda: { title: 'Senda Café — Retail', b1: 'Análisis de ventas, costos y productividad por camarero.', b2: 'Alertas de stock y propuesta de turnos óptimos.', b3: 'KPIs de margen y rotación mensual.' },
+          adventure: {
+            title: 'Adventure Works',
+            b1: 'Análisis de la base de datos Adventure Works (empresa ficticia de bicicletas y accesorios).',
+            b2: 'Objetivo: modelo analítico global y regional para entender el negocio y mejorar decisiones.',
+            b3: 'Herramientas: SQL Server, Power Query, Power BI y storytelling de KPIs.'
+          }
         },
         notes: { title: 'Notas y repos', latest: 'Más recientes' },
         contact: { title: '¡Hablemos!', desc: '¿Agendamos 15’ para hablar de tus KPIs? Respondo en 24h.', button: 'Contacto ' },
@@ -309,7 +342,14 @@
           title: 'Data Analytics Projects', subtitle: 'Cases with measurable impact', allRepos: 'See all repos',
           biogenesys: { title: 'Biogenesys — Healthcare LATAM', b1: 'Automated cleaning (2.3M rows) with Pandas.', b2: 'Dashboard refresh: <strong>18m → 4m</strong>.', b3: 'Identified 3 countries with the highest expansion potential.' },
           nba: { title: 'NBA‑StatVision — Sports', b1: 'BigQuery: standardization of 10 seasons.', b2: 'Injury model vs. workload.', b3: 'Player/team filters with rolling windows.' },
-          senda: { title: 'Senda Café — Retail', b1: 'Sales, costs and waiter productivity analysis.', b2: 'Stock alerts and optimal shifts proposal.', b3: 'Margin and monthly turnover KPIs.' }
+          senda: { title: 'Senda Café — Retail', b1: 'Sales, costs and waiter productivity analysis.', b2: 'Stock alerts and optimal shifts proposal.', b3: 'Margin and monthly turnover KPIs.' },
+          senda: { title: 'Senda Café — Retail', b1: 'Sales, costs and waiter productivity analysis.', b2: 'Stock alerts and optimal shifts proposal.', b3: 'Margin and monthly turnover KPIs.' },
+          adventure: {
+            title: 'Adventure Works',
+            b1: 'Analysis of the Adventure Works database (fictional bicycle & accessories company).',
+            b2: 'Goal: global and regional analytics model to understand the business and improve decision-making.',
+            b3: 'Tools: SQL Server, Power Query, Power BI and KPI storytelling.'
+          }
         },
         notes: { title: 'Notes & repos', latest: 'Latest' },
         contact: { title: "Let's talk!", desc: "Shall we schedule 15' to discuss your KPIs? I reply within 24h.", button: 'Contact ' },
@@ -330,7 +370,13 @@
           title: 'Progetti di Data Analytics', subtitle: 'Casi con impatto misurabile', allRepos: 'Vedi tutti i repo',
           biogenesys: { title: 'Biogenesys — Sanità LATAM', b1: 'Automazione della pulizia (2,3M righe) con Pandas.', b2: 'Refresh della dashboard: <strong>18m → 4m</strong>.', b3: 'Identificati 3 paesi con maggior potenziale di espansione.' },
           nba: { title: 'NBA‑StatVision — Sport', b1: 'BigQuery: standardizzazione di 10 stagioni.', b2: 'Modello infortuni vs. carico di gioco.', b3: 'Filtri per giocatore/squadra con rolling windows.' },
-          senda: { title: 'Senda Café — Retail', b1: 'Analisi di vendite, costi e produttività dei camerieri.', b2: 'Avvisi di stock e proposta di turni ottimali.', b3: 'KPI di margine e rotazione mensile.' }
+          senda: { title: 'Senda Café — Retail', b1: 'Analisi di vendite, costi e produttività dei camerieri.', b2: 'Avvisi di stock e proposta di turni ottimali.', b3: 'KPI di margine e rotazione mensile.' },
+          adventure: {
+            title: 'Adventure Works',
+            b1: 'Analisi del database Adventure Works (azienda fittizia di biciclette e accessori).',
+            b2: 'Obiettivo: modello analitico globale e regionale per comprendere il business e migliorare le decisioni.',
+            b3: 'Strumenti: SQL Server, Power Query, Power BI e storytelling dei KPI.'
+          }
         },
         notes: { title: 'Note e repo', latest: 'Più recenti' },
         contact: { title: 'Parliamo!', desc: 'Fissiamo 15’ per parlare dei tuoi KPI? Rispondo entro 24h.', button: 'Contatto ' },
@@ -351,7 +397,13 @@
           title: 'Projetos de Data Analytics', subtitle: 'Casos com impacto mensurável', allRepos: 'Ver todos os repositórios',
           biogenesys: { title: 'Biogenesys — Saúde LATAM', b1: 'Automatização de limpeza (2,3M linhas) com Pandas.', b2: 'Atualização do dashboard: <strong>18m → 4m</strong>.', b3: 'Identifiquei 3 países com maior potencial de expansão.' },
           nba: { title: 'NBA‑StatVision — Esportes', b1: 'BigQuery: padronização de 10 temporadas.', b2: 'Modelo de lesões vs. carga de jogo.', b3: 'Filtros por jogador/equipe com rolling windows.' },
-          senda: { title: 'Senda Café — Varejo', b1: 'Análise de vendas, custos e produtividade por garçom.', b2: 'Alertas de estoque e proposta de turnos ótimos.', b3: 'KPIs de margem e rotatividade mensal.' }
+          senda: { title: 'Senda Café — Varejo', b1: 'Análise de vendas, custos e produtividade por garçom.', b2: 'Alertas de estoque e proposta de turnos ótimos.', b3: 'KPIs de margem e rotatividade mensal.' },
+          adventure: {
+            title: 'Adventure Works',
+            b1: 'Análise do banco de dados Adventure Works (empresa fictícia de bicicletas e acessórios).',
+            b2: 'Objetivo: modelo analítico global e regional para entender o negócio e melhorar as decisões.',
+            b3: 'Ferramentas: SQL Server, Power Query, Power BI e storytelling de KPIs.'
+          }
         },
         notes: { title: 'Notas e repositórios', latest: 'Mais recentes' },
         contact: { title: 'Vamos conversar!', desc: 'Marcamos 15’ para falar dos seus KPIs? Respondo em até 24h.', button: 'Contato ' },
