--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
     <div class="derechos-de-autor" data-i18n="footer.rights">Creado por Fernando Robles (2025) ©</div>
   </footer>
 
+  <!-- configuración de idiomas --> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
