--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
   <!-- configuración de idiomas --> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JS/assets/js/i18n-inline.js"></script>
-  <script src="assets/js/track.js"></script>
+  <script src="JS/assets/js/track.js"></script>
 
   
 </body>
