--- a/index.html
+++ b/index.html
@@ -292,11 +292,50 @@
     <div class="derechos-de-autor" data-i18n="footer.rights">Creado por Fernando Robles (2025) ©</div>
   </footer>
 
-  <!-- configuración de idiomas --> 
+  <!-- JS --> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JS/assets/js/i18n-inline.js"></script>
   <script src="JS/assets/js/track.js"></script>
+  <script src="JS/assets/js/click-tracker.js"
+        defer
+        data-endpoint="https://script.google.com/macros/s/AKfyc.../exec"></script>
 
+
+  <!-- Atributos para botones-->
+   <!-- LinkedIn -->
+<a href="https://www.linkedin.com/in/tu-user"
+   class="btn btn-primary"
+   data-track="click"
+   data-event="outbound_click"
+   data-target="linkedin"
+   data-location="hero"
+   rel="noopener" target="_blank">
+  LinkedIn
+</a>
+
+<!-- GitHub -->
+<a href="https://github.com/tu-user"
+   class="btn btn-dark"
+   data-track="click"
+   data-event="outbound_click"
+   data-target="github"
+   data-location="hero"
+   rel="noopener" target="_blank">
+  GitHub
+</a>
+
+<!-- Descargar CV -->
+<a href="/assets/CV-Fernando-Robles.pdf"
+   class="btn btn-outline-secondary"
+   data-track="click"
+   data-event="download"
+   data-target="cv_pdf"
+   data-location="hero"
+   download>
+  Descargar CV
+</a>
+
+   
   
 </body>
 </html>
