--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div class="col-12 col-md-4 seccion-titulo" data-i18n="contact.title">¡Hablemos!</div>
           <div class="col-12 col-md-4 descripcion" data-i18n="contact.desc">¿Agendamos 15’ para hablar de tus KPIs? Respondo en 24h.</div>
           <div class="col-12 col-md-4">
-            <a href="mailto:fernandomdq12@gmail.com">
+            <a class="btn btn-primary" href="/contacto.html?lang=es">
               <button type="button" data-i18n="contact.button">Contacto <i class="bi bi-envelope-at-fill"></i></button>
             </a>
           </div>
@@ -296,44 +296,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JS/assets/js/i18n-inline.js"></script>
   <script src="JS/assets/js/track.js"></script>
-  <script src="JS/assets/js/click-tracker.js"
-        defer
-        data-endpoint="https://script.google.com/macros/s/AKfyc.../exec"></script>
-
-
-  <!-- Atributos para botones-->
-   <!-- LinkedIn -->
-<a href="https://www.linkedin.com/in/tu-user"
-   class="btn btn-primary"
-   data-track="click"
-   data-event="outbound_click"
-   data-target="linkedin"
-   data-location="hero"
-   rel="noopener" target="_blank">
-  LinkedIn
-</a>
-
-<!-- GitHub -->
-<a href="https://github.com/tu-user"
-   class="btn btn-dark"
-   data-track="click"
-   data-event="outbound_click"
-   data-target="github"
-   data-location="hero"
-   rel="noopener" target="_blank">
-  GitHub
-</a>
-
-<!-- Descargar CV -->
-<a href="/assets/CV-Fernando-Robles.pdf"
-   class="btn btn-outline-secondary"
-   data-track="click"
-   data-event="download"
-   data-target="cv_pdf"
-   data-location="hero"
-   download>
-  Descargar CV
-</a>
 
    
   
