--- a/index.html
+++ b/index.html
@@ -272,8 +272,18 @@
           <div class="col-12 col-md-4 seccion-titulo" data-i18n="contact.title">¡Hablemos!</div>
           <div class="col-12 col-md-4 descripcion" data-i18n="contact.desc">¿Agendamos 15’ para hablar de tus KPIs? Respondo en 24h.</div>
           <div class="col-12 col-md-4">
-            <a class="btn btn-primary" href="/contacto.html?lang=es">
+            <!-- <a class="btn btn-primary" href="/contacto.html?lang=es" >
               <button type="button" data-i18n="contact.button">Contacto <i class="bi bi-envelope-at-fill"></i></button>
+            </a> -->
+            <!-- <a class="btn btn-primary" data-contact-link href="contacto.html" data-i18n="contact.button">
+              Contacto <i class="bi bi-envelope-at-fill"></i>
+            </a> -->
+            <a href="contacto.html"
+                class="btn btn-outline-light btn-lg rounded-pill d-inline-flex align-items-center justify-content-center gap-2 px-4"
+                data-contact-link
+                data-i18n="contact.button">
+                Contacto 
+              <i class="bi bi-envelope-at-fill"></i>
             </a>
           </div>
         </div>
@@ -296,8 +306,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="JS/assets/js/i18n-inline.js"></script>
   <script src="JS/assets/js/track.js"></script>
-
-   
-  
+  <script src="JS/assets/js/i18n-contact.js"></script>
 </body>
 </html>
