--- a/index.html
+++ b/index.html
@@ -7,28 +7,32 @@
   <meta name="description" content="Portafolio de Data Analytics de Fernando Robles: Power BI, SQL, Python, BigQuery, proyectos con impacto de negocio y storytelling de KPIs.">
   <meta name="author" content="Fernando Raúl Robles">
   <meta name="keywords" content="Data Analyst, Power BI, SQL, Python, BigQuery, KPIs, Dashboards, ETL, Portfolio">
+
   <!-- Open Graph -->
   <meta property="og:title" content="Fernando Robles | Data Analyst & BI">
   <meta property="og:description" content="Transformo datos en decisiones de negocio con Power BI, SQL y Python.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="Images/og-image.webp">
-  <!-- Bootstrap -->
+
+  <!-- Bootstrap & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-  <!-- Styles - CSS-->
+
+  <!-- Styles -->
   <link rel="icon" type="image/x-icon" href="Imagenes/Icono_data.png">
   <link rel="stylesheet" href="CSS/style_portfolio_final.css">
+  <!-- estilos del formulario de contacto (antes en contacto.html) -->
+  <link rel="stylesheet" href="CSS/contact.css">
+
   <style>
     /* Ajustes sutiles para el selector en la navbar */
     .lang-select { min-width: 120px; }
-    @media (max-width: 767.98px) {
-      .lang-select { width: 100%; }
-    }
+    @media (max-width: 767.98px) { .lang-select { width: 100%; } }
   </style>
 </head>
 <body>
@@ -38,10 +42,12 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-nav" aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbar-nav">
         <a class="navbar-brand" href="#">
           <img src="Imagenes/Icono_data.png" width="44" height="44" alt="Logo FR">
         </a>
+
         <ul class="navbar-nav d-flex justify-content-center align-items-center ms-2 gap-2">
           <li class="nav-item"><a class="nav-link" href="#sobre-mi" data-i18n="nav.about">Sobre mí</a></li>
           <li class="nav-item"><a class="nav-link" href="#proyectos" data-i18n="nav.projects">Proyectos</a></li>
@@ -51,7 +57,6 @@
 
         <!-- Lado derecho: selector de idioma + botón CV -->
         <div class="ms-auto d-flex align-items-center gap-2">
-          <!-- Selector de idioma (visible en todas las resoluciones) -->
           <div class="d-flex align-items-center">
             <span class="me-1" aria-hidden="true">🌐</span>
             <label for="langSwitcher" class="visually-hidden">Idioma</label>
@@ -62,7 +67,6 @@
               <option value="pt">Português</option>
             </select>
           </div>
-          <!-- Botón CV -->
           <div class="d-none d-md-block">
             <a href="File/Fernando_Raul_Robles_CV_Data_Analyst.pdf" class="btn btn-outline-dark btn-sm" target="_blank" rel="noopener" data-i18n="cta.downloadCV">Descargar CV</a>
           </div>
@@ -95,11 +99,6 @@
       <p class="seccion-texto" data-i18n="about.body">
         Soy <strong>Data Analyst</strong> con foco en <strong>KPIs</strong>, <strong>visualización</strong> y <strong>modelado</strong>. Experiencia construyendo dashboards en <strong>Power BI</strong>, consultas <strong>SQL</strong>, análisis con <strong>Pandas</strong> y procesos <strong>ETL</strong> simples y reproducibles. Formación en SoyHenry (DA) y proyectos reales en salud, deportes y retail.
       </p>
-      <div class="d-flex gap-3 justify-content-center flex-wrap mt-2">
-        <!-- <span class="badge text-bg-light" data-i18n="about.badges.es">ES 🇦🇷 nativo</span>
-        <span class="badge text-bg-light" data-i18n="about.badges.en">EN B1/B2</span>
-        <span class="badge text-bg-light" data-i18n="about.badges.it">IT A2/B1</span> -->
-      </div>
     </div>
   </section>
 
@@ -146,11 +145,13 @@
     </div>
   </section>
 
-  <!-- Proyectos -->
+  <!-- Proyectos (UN solo id="proyectos") -->
   <section id="proyectos" class="seccion-clara py-5">
     <div class="container">
       <h2 class="seccion-titulo texto-negro text-center" data-i18n="projects.title">Proyectos de Data Analytics</h2>
       <p class="seccion-descripcion text-center" data-i18n="projects.subtitle">Casos con impacto medible</p>
+
+      <!-- Fila 1 -->
       <div class="row g-4 mt-2">
         <!-- Biogenesys -->
         <div class="col-12 col-md-6 col-lg-4">
@@ -165,7 +166,6 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/Biogenesys" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
           <div class="card h-100 shadow-sm">
             <img src="Imagenes/Nba.PNG" class="card-img-top" alt="Dashboard NBA-StatVision">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title" data-i18n="projects.nba.title">NBA‑StatVision — Deportes</h5>
+              <h5 class="card-title" data-i18n="projects.nba.title">NBA-StatVision — Deportes</h5>
               <ul class="small mb-3">
                 <li data-i18n="projects.nba.b1">BigQuery: estandarización de 10 temporadas.</li>
                 <li data-i18n="projects.nba.b2">Modelo de lesiones vs. carga de juego.</li>
@@ -183,7 +183,6 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/NBA-StatVision" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
@@ -201,40 +200,34 @@
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/SendaCafe" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Proyectos (segunda línea) -->
-  <section id="proyectos" class="seccion-clara py-5">
-    <div class="container">
+      <!-- Fila 2 -->
       <div class="row g-4 mt-2">
         <!-- Adventure Works -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/adventure works.jpg" class="card-img-top" alt="adventure">
+            <img src="Imagenes/adventure works.jpg" class="card-img-top" alt="Adventure Works">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.adventure.title">Adventure Works</h5>
               <ul class="small mb-3">
-                <li data-i18n="projects.adventure.b1">Análisis de la base de datos Adventure Works (empresa ficticia de venta de bicicletas y accesorios).</li>
-                <li data-i18n="projects.adventure.b2">Objetivo: desarrollar un modelo analítico global y regional para entender el negocio, medir desempeño y mejorar la toma de decisiones.</li>
-                <li data-i18n="projects.adventure.b3">Herramientas principales: SQL Server, Power Query, Power BI y Storytelling de KPIs.</li>
+                <li data-i18n="projects.adventure.b1">Análisis de la base de datos Adventure Works (empresa ficticia de bicicletas y accesorios).</li>
+                <li data-i18n="projects.adventure.b2">Modelo analítico global y regional para entender el negocio y mejorar decisiones.</li>
+                <li data-i18n="projects.adventure.b3">SQL Server, Power Query, Power BI y storytelling de KPIs.</li>
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/AdventureWorks" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
-                <!-- <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-bar-chart"></i> Demo</a> -->
               </div>
             </div>
           </div>
         </div>
       </div>
 
-
-
-
+      <!-- CTA a todos los repos -->
       <div class="text-center mt-4">
         <a href="https://github.com/ferroblesmdq12?tab=repositories" target="_blank" rel="noopener" class="btn btn-info" data-i18n="projects.allRepos">
           Ver todos los repos <i class="bi bi-arrow-right-circle-fill"></i>
@@ -264,27 +257,52 @@
     </div>
   </section>
 
-  <!-- Contacto -->
+  <!-- Contacto (formulario integrado) -->
   <section id="contacto" class="seccion-oscura py-5">
     <div class="container">
-      <div class="container text-center rectangulo d-flex justify-content-evenly">
-        <div class="row align-items-center w-100">
-          <div class="col-12 col-md-4 seccion-titulo" data-i18n="contact.title">¡Hablemos!</div>
-          <div class="col-12 col-md-4 descripcion" data-i18n="contact.desc">¿Agendamos 15’ para hablar de tus KPIs? Respondo en 24h.</div>
-          <div class="col-12 col-md-4">
-            <!-- <a class="btn btn-primary" href="/contacto.html?lang=es" >
-              <button type="button" data-i18n="contact.button">Contacto <i class="bi bi-envelope-at-fill"></i></button>
-            </a> -->
-            <!-- <a class="btn btn-primary" data-contact-link href="contacto.html" data-i18n="contact.button">
-              Contacto <i class="bi bi-envelope-at-fill"></i>
-            </a> -->
-            <a href="contacto.html"
-                class="btn btn-outline-light btn-lg rounded-pill d-inline-flex align-items-center justify-content-center gap-2 px-4"
-                data-contact-link
-                data-i18n="contact.button">
-                Contacto 
-              <i class="bi bi-envelope-at-fill"></i>
-            </a>
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+          <div class="card contact-card">
+            <div class="card-body p-4">
+              <h2 class="card-title text-center mb-4" data-i18n="contact.heading">Formulario de Contacto</h2>
+
+              <!-- Alerta de confirmación con botón de cerrar -->
+              <div id="alertSuccess" class="alert alert-success alert-dismissible fade d-none" role="alert">
+                <span data-i18n="contact.success">¡Tu mensaje fue enviado correctamente!</span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
+              </div>
+
+              <form id="contactForm" novalidate>
+                <div class="mb-3">
+                  <label for="name" class="form-label" data-i18n="contact.name">Nombre</label>
+                  <input type="text" class="form-control" id="name" placeholder="Tu nombre" data-i18n-placeholder="contact.namePh" required>
+                  <div class="invalid-feedback" data-i18n="contact.nameError">Por favor ingresa tu nombre.</div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="email" class="form-label" data-i18n="contact.email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="tu@email.com"
+                         data-i18n-placeholder="contact.emailPh"
+                         required pattern="^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$">
+                  <div class="invalid-feedback" data-i18n="contact.emailError">
+                    Por favor ingresa un email válido (ejemplo: usuario@dominio.com).
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <label for="message" class="form-label" data-i18n="contact.message">Nota</label>
+                  <textarea class="form-control" id="message" rows="5"
+                            placeholder="Escribe tu mensaje..."
+                            data-i18n-placeholder="contact.messagePh" required></textarea>
+                  <div class="invalid-feedback" data-i18n="contact.messageError">Por favor ingresa un mensaje.</div>
+                </div>
+
+                <div class="d-grid">
+                  <button type="submit" class="btn btn-primary btn-lg" data-i18n="contact.send">Enviar</button>
+                </div>
+              </form>
+
+            </div>
           </div>
         </div>
       </div>
@@ -302,10 +320,15 @@
     <div class="derechos-de-autor" data-i18n="footer.rights">Creado por Fernando Robles (2025) ©</div>
   </footer>
 
-  <!-- JS --> 
+  <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- i18n / tracking -->
   <script src="JS/assets/js/i18n-inline.js"></script>
   <script src="JS/assets/js/track.js"></script>
   <script src="JS/assets/js/i18n-contact.js"></script>
+
+  <!-- validación y envío del formulario (antes en contacto.html) -->
+  <script src="JS/assets/js/contact.js"></script>
 </body>
 </html>
