Probando nuevamente mail

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <label for="email" class="form-label" data-i18n="contact.email">Email</label>
                   <input type="email" class="form-control" id="email" placeholder="tu@email.com"
                          data-i18n-placeholder="contact.emailPh"
-                         required pattern="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$">
+                         required>
                   <div class="invalid-feedback" data-i18n="contact.emailError">
                     Por favor ingresa un email válido (ejemplo: usuario@dominio.com).
                   </div>
