--- a/index.html
+++ b/index.html
@@ -281,9 +281,10 @@
 
                 <div class="mb-3">
                   <label for="email" class="form-label" data-i18n="contact.email">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="tu@email.com"
-                         data-i18n-placeholder="contact.emailPh"
-                         required>
+                  <input type="email" class="form-control" id="email"
+                      placeholder="tu@email.com"
+                      data-i18n-placeholder="contact.emailPh"
+                      required autocomplete="email" inputmode="email" spellcheck="false">
                   <div class="invalid-feedback" data-i18n="contact.emailError">
                     Por favor ingresa un email válido (ejemplo: usuario@dominio.com).
                   </div>
