Probando automatizacion de mail de visitas y contestacion al usuario

--- a/index.html
+++ b/index.html
@@ -329,9 +329,10 @@
   <!-- i18n / tracking -->
   <script src="JS/assets/js/i18n-inline.js"></script>
   <script src="JS/assets/js/track.js"></script>
-  <script src="JS/assets/js/i18n-contact.js"></script>
+  <!-- <script src="JS/assets/js/i18n-contact.js"></script> -->
 
   <!-- validación y envío del formulario (antes en contacto.html) -->
   <script src="JS/assets/js/contact.js"></script>
+ 
 </body>
 </html>
