--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <ul class="small mb-3">
                 <li data-i18n="projects.partners.b1">Dashboard creado en Streamlit y Base de Datos en la nube.</li>
                 <li data-i18n="projects.partners.b2">Métricas de partners por países, plan comercial, partners, activos e inactivos y cantidad de notificaciones.</li>
-                <li data-i18n="projects.partners.b3">Modelo de machine learning para obtener la tasa Churn Real y graficos de distribucion de Churn. Top 10 partners con mayor probabilidad de churn.</li>
+                <li data-i18n="projects.partners.b3">Modelo de ML para obtener la tasa Churn Real y graficos de distribucion de Churn. Top 10 partners con mayor probabilidad de churn.</li>
               </ul>
               <div class="mt-auto">
                 <a href="https://github.com/ferroblesmdq12/simiai-ds-tech-challenge" target="_blank" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-github"></i> Repo</a>
@@ -242,8 +242,7 @@
             </div>
           </div>
         </div>
-      </div> 
-
+      </div> e
 
       <!-- CTA a todos los repos -->
       <div class="text-center mt-4">
