--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- Biogenesys -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/Biogenesys.png" class="card-img-top" alt="Dashboard Biogenesys">
+            <img src="imagenes/Biogenesys.png" class="card-img-top" alt="Dashboard Biogenesys">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.biogenesys.title">Biogenesys — Salud LATAM</h5>
               <ul class="small mb-3">
@@ -173,7 +173,7 @@
         <!-- NBA-StatVision -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/Nba.png class="card-img-top" alt="Dashboard NBA-StatVision">
+            <img src="imagenes/Nba.png"card-img-top" alt="Dashboard NBA-StatVision">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.nba.title">NBA-StatVision — Deportes</h5>
               <ul class="small mb-3">
@@ -190,7 +190,7 @@
         <!-- Senda Café -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/Logo_café.png" class="card-img-top" alt="Dashboard Senda Café">
+            <img src="imagenes/Logo_café.png" class="card-img-top" alt="Dashboard Senda Café">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.senda.title">Senda Café — Retail</h5>
               <ul class="small mb-3">
@@ -211,7 +211,7 @@
         <!-- Adventure Works -->
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="Imagenes/adventure works.jpg" class="card-img-top" alt="Adventure Works">
+            <img src="imagenes/adventure works.jpg" class="card-img-top" alt="Adventure Works">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title" data-i18n="projects.adventure.title">Adventure Works</h5>
               <ul class="small mb-3">
